--- a/Fundraising/wwwroot/CMS/Employee.html
+++ b/Fundraising/wwwroot/CMS/Employee.html
@@ -42,7 +42,8 @@
                 <div class="row justify-content-center">
                     <!-- 側邊欄位 -->
 
-                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar">
+                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar"
+                    style="overflow-x: auto;max-height: 750px;">
                         <br>
                         <div id="mysider"></div>
                     </ul>
@@ -331,7 +332,7 @@
                     console.log(this.addemployee)
                     axios.post("/api/Employees/", this.addemployee).then(
                         (response) => {
-                            swal(`新增成功+${response.data}`, "", "success", {}).then(x => {
+                            swal("新增成功", "", "success", {}).then(x => {
                                 window.location.reload()
                             })
                         }
@@ -413,7 +414,7 @@
                 axios.get("/api/back/Employees/").then(res => {
 
                     this.employeeList = res.data
-                    setTimeout(() => loader.hide(), 0.5 * 1000)
+                    setTimeout(() => loader.hide(), 300)
                     // console.log(this.employeeList)
                 })
             }
