--- a/Fundraising/wwwroot/CMS/Odetails.html
+++ b/Fundraising/wwwroot/CMS/Odetails.html
@@ -41,7 +41,8 @@
                 <div class="row justify-content-center">
                     <!-- 側邊欄位 -->
 
-                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar">
+                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar"
+                        style="overflow-x: auto;max-height: 750px;">
                         <br>
                         <div id="mysider"></div>
                     </ul>
@@ -61,7 +62,8 @@
                                         <table class="table mb-0">
                                             <thead class="thead-dark">
                                                 <tr>
-                                                    <th colspan="6" class="h3 p-2">贊助編號: <span v-cloak style="color:white">{{odetailsinfo.orderId}}</span></th>
+                                                    <th colspan="6" class="h3 p-2">贊助編號: <span v-cloak
+                                                            style="color:white">{{odetailsinfo.orderId}}</span></th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -232,10 +234,24 @@
                 axios.get(`/api/back/Odetails/${sessionStorage.getItem("orderId")}`)
                     .then((response) => {
                         this.odetailsinfo = response.data[0]
+                        var strsplit = this.odetailsinfo.masterCardId.split("")
+                        for (let i = 0; i < strsplit.length; i++) {
+                            switch (i) {
+                                case 3:
+                                strsplit[i] = strsplit[i] + "-"
+                                    break;
+                                case 7:
+                                strsplit[i] = strsplit[i] + "-"
+                                    break;
+                                case 11:
+                                strsplit[i] = strsplit[i] + "-"
+                                    break;
+                            }
+                        }
+                        this.odetailsinfo.masterCardId = strsplit.join('')
                         setTimeout(() => loader.hide(), 0.5 * 1000);
                     });
                 axios.get(`/api/Employees/${getCookie("employeeId")}`).then(res => {
-
                     this.employeeinfo = res.data
                     console.log(this.employeeinfo)
                 })
