--- a/Fundraising/wwwroot/CMS/PdetailsEdit.html
+++ b/Fundraising/wwwroot/CMS/PdetailsEdit.html
@@ -22,6 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3"></script>
     <link href="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3/dist/vue-loading.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- <script src="js/sb-admin-2.min.js"></script> -->
     <script src="./js/logincheck.js"></script>
 </head>
@@ -38,7 +39,8 @@
             <div class=" container-fluid px-5 p-4">
                 <div class="row justify-content-center">
                     <!-- 側邊欄位 -->
-                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar">
+                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar"
+                    style="overflow-x: auto;max-height: 750px;">
                         <br>
                         <div id="mysider"></div>
                     </ul>
@@ -203,7 +205,6 @@
                                                     <div v-if="Question.length == 0">沒有常見問題資訊</div>
                                                     <div class="">
                                                         <h5 class="card-header" id="headingOne">
-
                                                             {{item.questionTitle}}
                                                         </h5>
                                                         <div class="p-2">
@@ -214,7 +215,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-12 d-flex text-right px-5 justify-content-center">
+                                    <div class="col-12 d-flex text-right px-5 pb-3 justify-content-center ">
                                         <div class="col-2">
                                             <button class="btn btn-secondary" style="width: 100%;"
                                                 onclick="window.history.back()">返回</button>
@@ -329,10 +330,8 @@
                     let loader = this.$loading.show({
                         loader: 'dots'
                     });
-                    // setTimeout(() => loader.hide(), 0.5 * 1000);
                 },
                 logout: function () {
-                    // alert("1523 ")
                     axios.get("/api/back/logout").then(res => { if (res.data == "已登出") { window.location.reload() } })
                 },
                 setday: function () {
@@ -363,9 +362,12 @@
                             }
                             console.log(putproduct)
                             axios.put(`/api/back/Products/${this.productinfo.productId}`, putproduct)
-                                .then(response => console.log(response));
-                            alert("提案審核已確認");
-                            window.location = "./Preview.html"
+                                .then(response => {
+                                    swal("提案審核已確認", "", "success", {}).then(x => {
+                                        window.location = "./Preview.html"
+                                    })
+                                    console.log(response)
+                                });
                         })
                 }
             },
@@ -377,7 +379,6 @@
                     .then((response) => {
                         response.data[0].endtime = ''
                         this.productinfo = response.data[0]
-                        // console.log(this.productinfo)
                         setTimeout(() => loader.hide(), 0.5 * 1000);
                     })
                 axios.get(`/api/back/Pplans/${sessionStorage.getItem('productId')}`)
@@ -385,7 +386,6 @@
                 axios.get(`/api/back/Pquestion/${sessionStorage.getItem('productId')}`)
                     .then((response) => { this.Question = response.data })
                 axios.get(`/api/Employees/${getCookie("employeeId")}`).then(res => {
-
                     this.employeeinfo = res.data
                     console.log(this.employeeinfo)
                 })
