--- a/Fundraising/wwwroot/CMS/checkrefund.html
+++ b/Fundraising/wwwroot/CMS/checkrefund.html
@@ -24,6 +24,9 @@
     <script src="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3"></script>
     <link href="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3/dist/vue-loading.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="./js/logincheck.js"></script>
+
 </head>
 
 <body>
@@ -40,7 +43,8 @@
                 <div class="row justify-content-center">
                     <!-- 側邊欄位 -->
 
-                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar">
+                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar"
+                    style="overflow-x: auto;max-height: 750px;">
                         <br>
                         <div id="mysider"></div>
                     </ul>
@@ -60,7 +64,8 @@
                                             <table class="table mb-0">
                                                 <thead class="thead-dark">
                                                     <tr>
-                                                        <th colspan="6" class="h3 p-2">贊助編號: <span v-cloak style="color:white">{{odetailsinfo.orderId}}</span>
+                                                        <th colspan="6" class="h3 p-2">贊助編號: <span v-cloak
+                                                                style="color:white">{{odetailsinfo.orderId}}</span>
                                                         </th>
                                                     </tr>
                                                 </thead>
@@ -68,11 +73,11 @@
                                                     <tr>
                                                         <td>會員名稱:</td>
                                                         <td v-cloak>
-                                                           {{odetailsinfo.recipientName}}
+                                                            {{odetailsinfo.recipientName}}
                                                         </td>
                                                         <td>贊助日期:</td>
                                                         <td v-cloak>
-                                                          {{odetailsinfo.purchaseTime}}
+                                                            {{odetailsinfo.purchaseTime}}
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -88,7 +93,7 @@
                                                     <tr>
                                                         <td>信用卡號:</td>
                                                         <td v-cloak>
-                                                           {{odetailsinfo.masterCardId}}
+                                                            {{odetailsinfo.masterCardId}}
                                                         </td>
                                                         <td>送貨地址:</td>
                                                         <td colspan="3" v-cloak>
@@ -130,8 +135,10 @@
                                                         </div>
                                                         <div class=" text-right p-0">
                                                             <div v-cloak>{{odetailsinfo.planPrice}}</div>
-                                                            <div class="mb-1" v-cloak>{{odetailsinfo.addSponsorship}} </div>
-                                                            <div style="font-size: 1.3rem;" v-cloak>{{odetailsinfo.planPrice +
+                                                            <div class="mb-1" v-cloak>{{odetailsinfo.addSponsorship}}
+                                                            </div>
+                                                            <div style="font-size: 1.3rem;" v-cloak>
+                                                                {{odetailsinfo.planPrice +
                                                                 odetailsinfo.addSponsorship}}</div>
                                                         </div>
                                                     </div>
@@ -184,7 +191,7 @@
             </div>
         </div>
     </div>
-    
+
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
@@ -209,10 +216,8 @@
                     let loader = this.$loading.show({
                         loader: 'dots'
                     });
-                    // setTimeout(() => loader.hide(), 0.5 * 1000);
                 },
                 logout: function () {
-                    // alert("1523 ")
                     axios.get("/api/back/logout").then(res => { if (res.data == "已登出") { window.location.reload() } })
                 },
                 checkOlist: function (index) {
@@ -227,10 +232,13 @@
                     axios.get(`/api/refunds/${this.odetailsinfo.refundId}`).then(res => {
                         let refund = res.data;
                         refund.refundStateId = 2;
-                        axios.put(`/api/refunds/${refund.refundId}`, refund).then(res => console.log(res))
+                        axios.put(`/api/refunds/${refund.refundId}`, refund).then(res => {
+                            console.log(res)
+                            swal("確認退款成功", "", "success", {}).then(x => {
+                                window.location = "/cms/Orefund.html"
+                            })
+                        })
                     });
-                    alert("訂單與退款狀態已修改(待新增畫面)")
-                    window.location = "/cms/Orefund.html"
                 }
             },
 
@@ -241,60 +249,14 @@
                 axios.get(`/api/back/Refundetails/${sessionStorage.getItem("orderId")}`)
                     .then((response) => {
                         this.odetailsinfo = response.data[0]
-                        setTimeout(() => loader.hide(), 0.5 * 1000);
+                        setTimeout(() => loader.hide(), 300);
                     });
                 axios.get(`/api/Employees/${getCookie("employeeId")}`).then(res => {
-
                     this.employeeinfo = res.data
                     console.log(this.employeeinfo)
                 })
             }
         })
-        // const { createApp } = Vue
-
-        // createApp({
-        //     data() {
-        //         return {
-        //             odetailsinfo: [],
-        //             employeeinfo: []
-
-        //         }
-        //     },
-        //     methods: {
-        //         checkOlist: function (index) {
-        //             sessionStorage.setItem('orderId', index)
-        //         },
-        //         putRefundetails: function () {
-        //             axios.get(`/api/orders/${this.odetailsinfo.orderId}`).then(res => {
-        //                 let order = res.data;
-        //                 order.orderStateId = 5;
-        //                 axios.put(`/api/orders/${order.orderId}`, order).then(res => console.log(res))
-        //             });
-        //             axios.get(`/api/refunds/${this.odetailsinfo.refundId}`).then(res => {
-        //                 let refund = res.data;
-        //                 refund.refundStateId = 2;
-        //                 axios.put(`/api/refunds/${refund.refundId}`, refund).then(res => console.log(res))
-        //             });
-        //             alert("訂單與退款狀態已修改(待新增畫面)")
-        //             window.location = "/cms/Orefund.html"
-        //         }
-        //     },
-        //     mounted() {
-        //         axios.get(`/api/back/Refundetails/${sessionStorage.getItem("orderId")}`)
-        //             .then((response) => {
-        //                 this.odetailsinfo = response.data[0]
-        //             });
-        //         axios.get(`/api/Employees/${getCookie("employeeId")}`).then(res => {
-
-        //             this.employeeinfo = res.data
-        //             console.log(this.employeeinfo)
-        //         })
-
-        //         // this.orderlist = response.data
-        //         // console.log(response.data.length)
-
-        //     },
-        // }).mount('#app')
     </script>
 </body>
 
