--- a/Fundraising/wwwroot/CMS/member.html
+++ b/Fundraising/wwwroot/CMS/member.html
@@ -33,7 +33,8 @@
         <div class="container-fluid p-0 bg-theme" id="page-top">
             <!-- 導覽列 -->
             <div id="myheader" class="bg-white"
-                style="background-image: url(../img/headerbackgroud.png); background-size: cover;">
+                style="background-image: url(../img/headerbackgroud.png); background-size: cover;"
+                style="overflow-x: auto;max-height: 750px;">
 
             </div>
             <!-- 結束 導覽列 -->
@@ -41,7 +42,8 @@
                 <div class="row justify-content-center">
                     <!-- 側邊欄位 -->
 
-                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar">
+                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar"
+                    style="overflow-x: auto;max-height: 750px;">
                         <br>
                         <div id="mysider"></div>
                     </ul>
