--- a/Fundraising/wwwroot/CMS/profile.html
+++ b/Fundraising/wwwroot/CMS/profile.html
@@ -23,6 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3"></script>
     <link href="https://cdn.jsdelivr.net/npm/vue-loading-overlay@3/dist/vue-loading.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- <script src="js/sb-admin-2.min.js"></script> -->
     <script src="./js/logincheck.js"></script>
 
@@ -45,7 +46,8 @@
             <div class=" container-fluid px-5 p-4">
                 <div class="row justify-content-center">
                     <!-- 側邊欄位 -->
-                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar">
+                    <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar"
+                    style="overflow-x: auto;max-height: 750px;">
                         <br>
                         <div id="mysider"></div>
                     </ul>
@@ -178,7 +180,9 @@
                         // console.log("profiledata" + profiledata)
                         axios.put(`/api/Employees/${this.employeeinfo.employeeId}`, profiledata).then(res => {
                             console.log(res)
-                            window.location.reload();
+                            swal("個人資料修改成功", "", "success", {}).then(x => {
+                                window.location.reload()
+                            })
                         })
                     })
                 }
