--- a/Fundraising/wwwroot/ProductPage/product.html
+++ b/Fundraising/wwwroot/ProductPage/product.html
@@ -211,13 +211,14 @@
                 </div>
               </div>
               <div class="modal-footer">
-                <button type="button" @click="send" class="btn btn-success">
+                <button type="button" @click="send" class="btn btn-success" data-bs-dismiss="modal">
                   傳送
                 </button>
                 <button
                   type="button"
                   class="btn btn-secondary"
                   data-bs-dismiss="modal"
+
                 >
                   關閉
                 </button>
