--- a/Fundraising/wwwroot/MemberCentre/UserFollowing.html
+++ b/Fundraising/wwwroot/MemberCentre/UserFollowing.html
@@ -55,6 +55,12 @@
     </style>
     <title>追蹤專案</title>
   </head>
+  <style>
+    .following a {
+      color: black;
+      text-decoration: none;
+    }
+  </style>
   <body>
     <div class="container" id="app">
       <loading :can-cancel="true"></loading>
@@ -65,8 +71,10 @@
       <div class="card mx-auto mt-3">
         <div class="row m-3" v-if="myfollow.length>0">
           <div class="following col-4 my-3" v-for="item in myfollow">
-            <img :src="item.photo" alt="product" />
-            <h5 class="px-0">{{item.ptitle}}</h5>
+            <a href="../ProductPage/product.html" @click="getproductID(item)">
+              <img :src="item.photo" alt="product" />
+              <h5 class="px-0 mt-2">{{item.ptitle}}</h5>
+            </a>
             <p class="text-muted">提案人 {{item.puser}}</p>
             <button
               class="btn btn-outline-success d-block mx-auto cancelbtn"
