--- a/Fundraising/wwwroot/ProductPage/creditcard.html
+++ b/Fundraising/wwwroot/ProductPage/creditcard.html
@@ -101,84 +101,84 @@
 </head>
 
 <body>
-        <div class="container" style="height:0px;">
-            <button  onclick="testinput()" style="text-align: center;">TEST</button>
-        </div>
-        <form class="container app" >
-            <div class="form login">
-                <div>
-                    <p style="text-align: center; font-size: 20px;">※ 信用卡交易資訊 Credit Card Information</p>
-                </div>
-                <div class="creditcardnumber">
-                    <label for="cardnumber">信用卡卡號</label>
-                    <img style="width: 80px; padding: 0px 6px;" src="../img/creditcard.png" alt="">
-                    <div id="cardnumber" name="cardnumber">
-                        <input type="text" maxlength="4" class="testcard1 cardnumber1 autotab">
-                        <span>-</span>
-                        <input type="text" maxlength="4" class="testcard2 cardnumber2 autotab">
-                        <span>-</span>
-                        <input type="text" maxlength="4" class="testcard3 cardnumber3 autotab">
-                        <span>-</span>
-                        <input type="text" maxlength="4" class="testcard4 cardnumber4 autotab">
-                        <p style="font-size: 12px; margin-bottom: 0px !important;">本交易須通過Visa/MasterCard驗證。</p>
-                    </div>
-                </div>
-                <div class="creditcarddate">
-                    <label for="carddate">卡片有效期限</label>
-                    <div id="carddate" name="carddate">
-                        <input type="text" maxlength="2" class="testMM autotab" placeholder="MM">
-                        <span>-</span>
-                        <input type="text" maxlength="2" class="testYY autotab" placeholder="YY">
-                    </div>
-                </div>
-                <div class="creditcardsafecode">
-                    <label for="carddate">卡片安全碼</label>
-                    <div id="cardsafecode" name="cardsafecode">
-                        <input class="testCVV" type="text" maxlength="3">
-                        <img style="width:48px;" src="../img/safecode.png" alt="">
-                    </div>
-                </div>
-                <div class="cardinformation">
-                    <label for="ownername">持卡人姓名</label>
-                    <div id="ownername" name="ownername">
-                        <input class="testcardname" type="text" placeholder="請輸入卡片上的姓名">
-                    </div>
-                </div>
-                <div class="cardinformation">
-                    <label for="ownernumber">手機號碼</label>
-                    <div id="ownernumber" name="ownernumber">
-                        <input class="testcardphone" type="text" maxlength="10">
-                    </div>
-                </div>
-                <div class="cardinformation">
-                    <label for="ownermail">電子信箱</label>
-                    <div id="ownermail" name="ownermail">
-                        <input class="testcardmail" type="text" placeholder="選填">
-                    </div>
-                </div>
-                <div class="cardinformation">
-                    <label for="owneraddress">帳單地址</label>
-                    <div id="owneraddress" name="owneraddress">
-                        <input class="testcardaddress" style="width: 100%;" type="text" placeholder="選填">
-                    </div>
-                </div>
-                <div>
-                    <p style="color: #9d9d9d;">
-                        注意事項<br>
-                        &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp非經持卡人同意，如有冒用他人卡片盜刷之行為，刑法最高判五年有期徒刑<br>
-                        &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp本頁面已使用256bitSSL安全加密機制<br>
-                        &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp為確保網路交易安全，您同意本公司得就此筆交易向發卡銀行、收單銀行及持卡人核對是否屬實<br>
-                        &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp信用卡成功交易後否認，如經判定為本人或授權刷卡的行為，相關損失及費用須自行負擔
-                    </p>
-                </div>
-                <div style="text-align: center;">
-                    <input class="payok" id="pay" type="button" value="立即付款" v-on:click="payclick" style="border: #047c51 solid 2px;
-                    background-color: #047c51;
-                    color: white; padding: 6px 10px;">
+    <div class="container" style="height:0px;">
+        <button onclick="testinput()" style="text-align: center;">TEST</button>
+    </div>
+    <form class="container app">
+        <div class="form login">
+            <div>
+                <p style="text-align: center; font-size: 20px;">※ 信用卡交易資訊 Credit Card Information</p>
+            </div>
+            <div class="creditcardnumber">
+                <label for="cardnumber">信用卡卡號</label>
+                <img style="width: 80px; padding: 0px 6px;" src="../img/creditcard.png" alt="">
+                <div id="cardnumber" name="cardnumber">
+                    <input type="text" maxlength="4" class="testcard1 cardnumber1 autotab">
+                    <span>-</span>
+                    <input type="text" maxlength="4" class="testcard2 cardnumber2 autotab">
+                    <span>-</span>
+                    <input type="text" maxlength="4" class="testcard3 cardnumber3 autotab">
+                    <span>-</span>
+                    <input type="text" maxlength="4" class="testcard4 cardnumber4 autotab">
+                    <p style="font-size: 12px; margin-bottom: 0px !important;">本交易須通過Visa/MasterCard驗證。</p>
                 </div>
             </div>
-        </form>
-    
+            <div class="creditcarddate">
+                <label for="carddate">卡片有效期限</label>
+                <div id="carddate" name="carddate">
+                    <input type="text" maxlength="2" class="testMM autotab" placeholder="MM">
+                    <span>-</span>
+                    <input type="text" maxlength="2" class="testYY autotab" placeholder="YY">
+                </div>
+            </div>
+            <div class="creditcardsafecode">
+                <label for="carddate">卡片安全碼</label>
+                <div id="cardsafecode" name="cardsafecode">
+                    <input class="testCVV" type="text" maxlength="3">
+                    <img style="width:48px;" src="../img/safecode.png" alt="">
+                </div>
+            </div>
+            <div class="cardinformation">
+                <label for="ownername">持卡人姓名</label>
+                <div id="ownername" name="ownername">
+                    <input class="testcardname" type="text" placeholder="請輸入卡片上的姓名">
+                </div>
+            </div>
+            <div class="cardinformation">
+                <label for="ownernumber">手機號碼</label>
+                <div id="ownernumber" name="ownernumber">
+                    <input class="testcardphone" type="text" maxlength="10">
+                </div>
+            </div>
+            <div class="cardinformation">
+                <label for="ownermail">電子信箱</label>
+                <div id="ownermail" name="ownermail">
+                    <input class="testcardmail" type="text" placeholder="選填">
+                </div>
+            </div>
+            <div class="cardinformation">
+                <label for="owneraddress">帳單地址</label>
+                <div id="owneraddress" name="owneraddress">
+                    <input class="testcardaddress" style="width: 100%;" type="text" placeholder="選填">
+                </div>
+            </div>
+            <div>
+                <p style="color: #9d9d9d;">
+                    注意事項<br>
+                    &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp非經持卡人同意，如有冒用他人卡片盜刷之行為，刑法最高判五年有期徒刑<br>
+                    &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp本頁面已使用256bitSSL安全加密機制<br>
+                    &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp為確保網路交易安全，您同意本公司得就此筆交易向發卡銀行、收單銀行及持卡人核對是否屬實<br>
+                    &nbsp&nbsp&nbsp&nbsp•&nbsp&nbsp信用卡成功交易後否認，如經判定為本人或授權刷卡的行為，相關損失及費用須自行負擔
+                </p>
+            </div>
+            <div style="text-align: center;">
+                <input class="payok" id="pay" type="button" value="立即付款" v-on:click="payclick" style="border: #047c51 solid 2px;
+                    background-color: #047c51;
+                    color: white; padding: 6px 10px;">
+            </div>
+        </div>
+    </form>
+
 
 
 
@@ -216,7 +216,6 @@
             ,
             methods: {
                 payclick: function () {
-                    console.log(this.orderpayList);
                     var cardnumber = '';
                     for (var i = 1; i < 5; i++) {
                         cardnumber += $('.cardnumber' + i).val();
@@ -232,9 +231,8 @@
                             console.log(this.data);
                         },
                         success: function () {
-                            swal("付款成功!", "感謝您的購買!", "success").then((value) =>
-                            { window.location = "./mymainpage.html"});;
-                           /* alert("成功");*/
+                            swal("付款成功!", "感謝您的購買!", "success").then((value) => { window.location = "./mymainpage.html" });;
+                            /* alert("成功");*/
                         }
                     })
                 }
@@ -269,6 +267,10 @@
         }
 
     </script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
